modules/gdscript/tests/scripts/analyzer/errors/lambda_no_return.gd
func test():
	var lambda := func() -> int:
		print('no return')
	lambda.call()
